<resources>
    <string name="app_name">MeshWary</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Meshwary</string>
    <string name="nav_header_subtitle">Our App Help You To Start Your Traps Easily </string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="menu_History">History</string>
    <string name="menu_logout">Log Out</string>
    <string name="enter_email"> Enter phone Number</string>
    <string name="enter_Password"> Enter Password</string>
    <string name="Login">Login</string>
    <string name="fORGIR_PASSWORD">FORGOT PASSWORD ?</string>
    <string name="OR">_______________OR_______________</string>
    <string name="No_account_yet">No account yet? Create one</string>
    <string name="Male">Male</string>
    <string name="Female">Female</string>
    <string name="Resister">Register</string>
    <string name="User_name">  Enter  User name</string>
    <string name="Email">  Enter  Email</string>
    <string name="Phone">  Enter Phone</string>
    <string name="City">  Enter  City</string>
    <string name="Password">  Enter Password</string>
    <string name="Password2">  Renter Password </string>
    <string name="facebook_app_id">631417260926220</string>
    <string name="fb_login_protocol_scheme">fb631417260926220</string>
    <string name="notrip">No Upcoming Trips</string>
    <string name="titlehint">trip title</string>
    <string name="datehint">trip date</string>
    <string name="timehint">trip time</string>
    <string name="starthint">Trip start</string>
    <string name="destinationhint">Trip Destination</string>
    <string name="start">Start</string>
    <string name="nohistory">No History Trips</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="shownotes">Show Notes</string>
    <string name="edit">Edit</string>
    <string name="Add_Note">Add</string>
    <string name="no_notes">No Notes To Show</string>
    <string name="save_changes">Save Changes</string>
    <string-array name="descSpinner">
        <item>One Way Trip</item>
        <item>Round Trip</item>
    </string-array>
    <string-array name="repeatSpinner">
        <item>No Repeat</item>
        <item>daily</item>
        <item>Weekly</item>
        <item>Monthly</item>
    </string-array>
    <string name="create_floating_widget">Create Floating Widget</string>
    <string name="floating_widget_details">Notes:</string>
    <string name="draw_other_app_permission_denied">Draw over other app permission not available. App won\'t work without permission. Please try again.</string>

    <string name="Trip_Name">Trip Name</string>
    <string name="Start_Point">Start Point</string>
    <string name="End_Point">End Point</string>
    <string name="Start_Details">Start Details</string>
    <string name="ADD_TRIP">ADD TRIP</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="title_activity_history_map">Map</string>
    <string name="showmap">Map</string>
    <string name="EnterEmail">Enter Email</string>
    <string name="HaveAcount">ALREADY HAVE AN ACCOUNT ?</string>
</resources>