<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="5dp"
    android:background="#F8F5F0"
    app:cardCornerRadius="20dp"
    app:cardElevation="10dp"
    app:cardPreventCornerOverlap="true"
    app:cardUseCompatPadding="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="5dp"
        android:background="#F8F5F0"

        android:weightSum="7">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:weightSum="4.5"
            android:padding="10dp"
            android:textColor="#fff"
            android:layout_weight="1">

            <TextView
                android:id="@+id/trip_date_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2.25"
                android:layout_marginRight="5dp"
                android:textAlignment="center"
                android:text="@string/datehint"
                android:gravity="center_horizontal" />

            <TextView
                android:id="@+id/trip_time_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:textAlignment="center"
                android:text="@string/timehint"
                android:layout_marginRight="20dp"
                android:gravity="center_horizontal" />

            <ImageView
                android:id="@+id/image_menu"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_gravity="center"
                android:layout_weight="0.25"
                app:srcCompat="@drawable/menue" />

        </LinearLayout>

        <TextView
            android:id="@+id/trip_title_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/titlehint"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:gravity="center_horizontal" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="2"
                android:layout_weight="1"
                android:padding="5dp">


                    <TextView
                        android:id="@+id/trip_start_text"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:textAlignment="center"
                        android:text="@string/starthint"
                        android:layout_marginRight="5dp"
                        android:gravity="center_horizontal" />

                    <TextView
                        android:id="@+id/trip_destination_text"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:textAlignment="center"
                        android:text="@string/destinationhint"
                        android:layout_marginRight="5dp"
                        android:gravity="center_horizontal" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="5"
            android:layout_weight="1"
            android:padding="5dp">

            <Button
                android:id="@+id/startBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:text="@string/start"
                android:layout_marginRight="5dp"
                android:textColor="#ff2600"
                android:background="@drawable/line"/>

            <ImageView
                android:id="@+id/image_notes"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/line"
                app:srcCompat="@android:drawable/ic_input_add" />
        </LinearLayout>
    </LinearLayout>
</androidx.cardview.widget.CardView>