<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_margin="12dp"
    tools:context=".ui.addactivity.AddActivity">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Trip_Name"
        android:gravity="center"/>

    <EditText
        android:id="@+id/trip_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Start_Point"
        android:layout_marginTop="12dp"
        android:gravity="center"/>

    <EditText
        android:id="@+id/trip_start_point"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/End_Point"
        android:gravity="center"/>

    <EditText
        android:id="@+id/trip_end_point"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="24dp">

            <Button
                android:id="@+id/btn_date"
                android:layout_width="98dp"
                android:layout_height="90dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_marginStart="46dp"
                android:layout_marginLeft="46dp"
                android:background="@drawable/ic_calendar" />

            <Button
                android:id="@+id/btn_time"
                android:layout_width="93dp"
                android:layout_height="83dp"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_marginStart="81dp"
                android:layout_marginLeft="81dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="69dp"
                android:layout_marginRight="69dp"
                android:layout_marginBottom="1dp"
                android:layout_toEndOf="@+id/btn_date"
                android:layout_toRightOf="@+id/btn_date"
                android:background="@drawable/ic_alarm" />


        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="12dp"
            android:weightSum="2">


            <TextView
                android:id="@+id/in_date"
                android:layout_width="0dp"
                android:layout_height="28dp"
                android:layout_weight="1"
                android:gravity="center"
                android:textStyle="bold"
                android:textSize="16sp"/>

            <TextView
                android:id="@+id/in_time"
                android:layout_width="0dp"
                android:layout_height="28dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="24dp"
                android:layout_weight="1"
                android:gravity="center"
                android:textStyle="bold"
                android:textSize="16sp"/>

        </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/btn_add"
        android:layout_width="202dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="38dp"
        android:text="@string/ADD_TRIP" />


</LinearLayout>