<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="5dp"
    android:background="@color/quantum_cyan50"
    app:cardCornerRadius="20dp"
    app:cardElevation="10dp"
    app:cardPreventCornerOverlap="true"
    app:cardUseCompatPadding="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#F8F5F0"
        android:orientation="vertical"
        android:padding="5dp"
        android:weightSum="7">

        <TextView
            android:id="@+id/trip_title_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:text="@string/titlehint"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            tools:ignore="RtlCompat" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="203dp"
            app:srcCompat="@drawable/app_img" />

        <LinearLayout
            android:id="@+id/details_Layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:visibility="gone">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="horizontal"
                android:textColor="#fff"
                android:weightSum="2">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="5dp"
                    android:layout_weight="1"
                    android:gravity="center_horizontal"
                    android:text="@string/datehint"
                    android:textAlignment="center"
                    android:textSize="18dp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="5dp"
                    android:layout_weight="1"
                    android:gravity="center_horizontal"
                    android:text="@string/timehint"
                    android:textAlignment="center"
                    android:textSize="18dp"
                    android:textStyle="bold" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="horizontal"
                android:padding="10dp"
                android:textColor="#fff"
                android:weightSum="2">

                <TextView
                    android:id="@+id/trip_date_text"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="5dp"
                    android:layout_weight="1"
                    android:gravity="center_horizontal"
                    android:text="@string/datehint"
                    android:textAlignment="center" />

                <TextView
                    android:id="@+id/trip_time_text"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="5dp"
                    android:layout_weight="1"
                    android:gravity="center_horizontal"
                    android:text="@string/timehint"
                    android:textAlignment="center" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="horizontal"
                    android:padding="5dp"
                    android:weightSum="2">


                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_marginRight="5dp"
                        android:layout_weight="1"
                        android:gravity="center_horizontal"
                        android:text="@string/starthint"
                        android:textAlignment="center"
                        android:textSize="18dp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_marginRight="5dp"
                        android:layout_weight="1"
                        android:gravity="center_horizontal"
                        android:text="@string/destinationhint"
                        android:textAlignment="center"
                        android:textSize="18dp"
                        android:textStyle="bold" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="horizontal"
                    android:padding="5dp"
                    android:weightSum="2">


                    <TextView
                        android:id="@+id/trip_start_text"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_marginRight="5dp"
                        android:layout_weight="1"
                        android:gravity="center_horizontal"
                        android:text="@string/starthint"
                        android:textAlignment="center" />

                    <TextView
                        android:id="@+id/trip_destination_text"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_marginRight="5dp"
                        android:layout_weight="1"
                        android:gravity="center_horizontal"
                        android:text="@string/destinationhint"
                        android:textAlignment="center" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="horizontal"
                android:padding="5dp"
                android:weightSum="5">

                <Button
                    android:id="@+id/startBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="4"
                    android:background="@color/quantum_bluegrey50"
                    android:text="@string/start" />

                <ImageView
                    android:id="@+id/image_notes"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    app:srcCompat="@drawable/ic_event_note_black_24dp"
                    tools:ignore="VectorDrawableCompat" />
            </LinearLayout>
        </LinearLayout>


    </LinearLayout>
</androidx.cardview.widget.CardView>